pkg/plugins/policies/meshloadbalancingstrategy/plugin/v1alpha1/testdata/locality_aware_inbound_tags_disabled.listeners.golden.yaml
resources:
- name: backend
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 27777
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
            - addressPrefix: ::1
              prefixLen: 128
          routeConfig:
            name: outbound:backend
            requestHeadersToAdd:
            - header:
                key: x-kuma-tags
                value: '&kuma.io/service=backend&'
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: backend
              routes:
              - match:
                  prefix: /
                route:
                  cluster: backend
          statPrefix: "127_0_0_1_27777"
    name: outbound:127.0.0.1:27777
    trafficDirection: OUTBOUND
- name: payments
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 27778
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
            - addressPrefix: ::1
              prefixLen: 128
          routeConfig:
            name: outbound:backend
            requestHeadersToAdd:
            - header:
                key: x-kuma-tags
                value: '&kuma.io/service=payment&'
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: backend
              routes:
              - match:
                  prefix: /
                route:
                  cluster: payment
                  hashPolicy:
                  - queryParameter:
                      name: queryparam
                    terminal: true
                  - connectionProperties:
                      sourceIp: true
          statPrefix: "127_0_0_1_27778"
    name: outbound:127.0.0.1:27778
    trafficDirection: OUTBOUND
